@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>currentDocument</key>
-	<string>ruby/controller/appcontroller.rb</string>
 	<key>documents</key>
 	<array>
 		<dict>
@@ -20,29 +18,10 @@
 	<key>fileHierarchyDrawerWidth</key>
 	<integer>296</integer>
 	<key>metaData</key>
-	<dict>
-		<key>ruby/controller/appcontroller.rb</key>
-		<dict>
-			<key>caret</key>
-			<dict>
-				<key>column</key>
-				<integer>47</integer>
-				<key>line</key>
-				<integer>326</integer>
-			</dict>
-			<key>firstVisibleColumn</key>
-			<integer>0</integer>
-			<key>firstVisibleLine</key>
-			<integer>271</integer>
-		</dict>
-	</dict>
-	<key>openDocuments</key>
-	<array>
-		<string>ruby/controller/appcontroller.rb</string>
-	</array>
+	<dict/>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{596, 100}, {896, 1068}}</string>
+	<string>{{591, 69}, {1217, 1104}}</string>
 </dict>
 </plist>
